# astro_mount_control

./: .gitignore  CMakeLists.txt  LICENSE  NGC.csv_head  README.md  VERIFICATION_REPORT.md
ascom/: AstroMountTelescope.cs  ConversionHelper.cs  GrpcClient.cs  MountController.cs  MountControllerGrpc.cs  StateCache.cs
ascom_rotator/: AstroMountRotator.cs
certs/: server.crt  server.key
cmake/: FetchLibCanopen.cmake
config/: default.json  default_2026-06-14_15-29-13.json  default_2026-06-14_15-30-46.json  default_2026-06-14_23-17-55.json  default_2026-06-14_23-18-02.json  default_2026-06-14_23-31-37.json  default_2026-06-14_23-31-45.json  default_2026-06-14_23-59-14.json  default_2026-06-14_23-59-39.json  default_2026-06-15_00-00-07.json  default_2026-06-20_02-16-07.json  default_2026-06-21_02-37-46.json  default_2026-06-21_02-38-04.json  default_2026-06-21_02-38-53.json  default_2026-06-21_02-40-16.json  default_2026-06-21_02-42-24.json  default_2026-06-21_02-51-35.json  default_2026-06-28_10-17-12.json  default_2026-06-28_13-21-08.json  dual_servo_config.json  test_no_hardware.json
db/: README.md
db/include/: object_database_service.h
db/proto/: object_database.pb.h.backup  object_database.proto
db/src/: main.cpp  object_database_service.cpp
docs/: canopen_compliance_audit.md  canopen_hal_verification_report.md
docs/en/: README.md  api.md  api_examples.md  architecture.md  can_u2c_config_arch.md  can_u2c_config_fedora.md  can_u2c_config_opensuse.md  can_u2c_config_ubuntu_debian.md  canopen_alternatives.md  controller_configuration.md  controller_processing.md  controller_threads.md  data_flow.md  developer_onboarding.md  examples.md  hal_layer.md  index.md  installation.md  mathematical_model.md  project_analysis.md  testing_and_running.md  training_data.md
docs/en/can/: can_u2c_config_arch.md  can_u2c_config_fedora.md  can_u2c_config_opensuse.md  can_u2c_config_ubuntu_debian.md
docs/pl/: README.md  alternatywy_dla_canopen.md  analiza_projektu.md  api.md  api_examples.md  architecture.md  dane_treningowe.md  examples.md  hal_layer.md  index.md  installation.md  instrukcja_kalibracji.md  konfiguracja_can_u2c_arch.md  konfiguracja_can_u2c_fedora.md  konfiguracja_can_u2c_opensuse.md  konfiguracja_can_u2c_ubuntu_debian.md  konfiguracja_sterownika.md  model_matematyczny.md  proces_kalibracji.md  przeplyw_danych.md  przetwarzanie_kontrolera.md  przewodnik_dla_dewelopera.md  raport_poprawek_koordynat.md  raport_weryfikacji_koordynat.md  testowanie_i_uruchamianie.md  watki_kontrolera.md
docs/pl/konfiguracja_can/: konfiguracja_can_u2c_arch.md  konfiguracja_can_u2c_fedora.md  konfiguracja_can_u2c_opensuse.md  konfiguracja_can_u2c_ubuntu_debian.md
examples/: README.md
examples/cpp/: canopen_example.cpp  example_usage.cpp  grpc_example.cpp
examples/python/: example_usage.py  fixed_example.py
include/api/: canopen_server.h  grpc_server.h  service_impl.h
include/config/: config_monitor.h  configuration.h
include/controllers/: canopen_factory.h  canopen_interface.h  derotator_controller.h  icanopen_interface.h  mount_controller.h
include/core/: astronomical_calculations.h
include/exceptions/: mount_exceptions.h
include/hal/: encoder_reader.h  gamepad_input.h  hal_config.h  hal_factory.h  hal_interface.h  motor_control.h  safety_monitor.h  sensor_interface.h
include/hal/canopen_hal/: canopen_hal.h
include/logging/: logger.h
include/models/: ephemeris_tracker.h  kalman_filter.h  tpoint_model.h
include/safety/: watchdog.h
indi/: CMakeLists.txt  IndiPropertyMapper.cpp  IndiPropertyMapper.h  MountGrpcClient.cpp  MountGrpcClient.h  astro_mount_driver.cpp  astro_mount_driver.h
indi_rotator/: CMakeLists.txt  astro_mount_rotator_driver.cpp  astro_mount_rotator_driver.h
lib/canopen_wrapper/: CMakeLists.txt
lib/canopen_wrapper/include/canopen/: canopen.h
lib/canopen_wrapper/src/: canopen.cpp
proto/: canopen_service.proto  mount_controller.proto
scripts/: astro-mount-controller.service  axis_control_test.py  build.sh  build_external_deps.sh  run.sh
src/: main.cpp
src/api/: canopen_server.cpp  grpc_server.cpp  service_impl.cpp
src/config/: config_monitor.cpp  config_monitor.cpp.backup  configuration.cpp
src/controllers/: canopen_factory.cpp  canopen_interface.cpp  derotator_controller.cpp  mount_controller.cpp
src/core/: astronomical_calculations.cpp
src/hal/: hal_factory.cpp
src/hal/canopen_hal/: canopen_hal.cpp  canopen_hal.h
src/hal/ethernet_hal/: ethernet_hal.cpp  ethernet_hal.h
src/hal/gamepad_hal/: gamepad_hal.cpp  gamepad_hal.h  gamepad_input_evdev.cpp  gamepad_input_evdev.h
src/hal/serial_hal/: serial_hal.cpp  serial_hal.h
src/hal/simulated_hal/: simulated_hal.cpp  simulated_hal.h
src/logging/: logger.cpp
src/models/: ephemeris_tracker.cpp  kalman_filter.cpp  tpoint_model.cpp
tests/: test_astronomical_calculations.cpp  test_canopen_factory.cpp  test_canopen_hal.cpp  test_config_monitor.cpp  test_configuration.cpp  test_ephemeris_tracker.cpp  test_ethernet_hal.cpp  test_gamepad_hal.cpp  test_grpc_integration.cpp  test_hal_integration.cpp  test_kalman_filter.cpp  test_logger.cpp  test_mount_controller.cpp  test_serial_hal.cpp  test_subarcsecond_accuracy.cpp  test_tpoint_model.cpp  test_watchdog.cpp
web/: README.md  README.pl.md  index.html  test_integration.html
web/proto/: mount_controller.proto  object_database.proto
web/proxy/: .env.example  package-lock.json  package.json  server.js  server_enhanced.js
web/public/: index.html
web/public/css/: style.css
web/public/js/: api.js  app.js  i18n.js  logger.js  utils.js
web/public/js/components/: calibration.js  database.js  debugTest.js  logging.js  mountControl.js  mountStatus.js  settings.js  tracking.js
web/static/css/: object_database.css  style.css
web/static/js/: api-client.js  app.js  object_database.js  sky-map.js
